| Bug #38380 | Memory leak in LogHandler::addHandler after fail to parse params | ||
|---|---|---|---|
| Submitted: | 25 Jul 2008 18:10 | Modified: | 5 Oct 2008 18:26 |
| Reporter: | Magnus Blaudd | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | MySQL Cluster 6.2 | OS: | Any |
| Assigned to: | Magnus Blaudd | Target Version: | |
| Triage: | Needs Triage: D2 (Serious) | ||
[25 Jul 2008 18:10]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/50515 2635 Magnus Svensson 2008-07-25 Bug #38380 Memory leak in LogHandler::addHandler after fail to parse params
[25 Jul 2008 18:18]
Magnus Blaudd
Workaround is to not add a log handler with wrong parameters.
[25 Jul 2008 18:58]
Magnus Blaudd
Pushed to 5.1-telco-6.2, 6.3 and 6.4
[11 Sep 2008 20:13]
Jon Stephens
Documented bugfix in the NDB 6.2.16 and 6.3.17 changelogs as follows:
Failure to parse configuration parameters could cause a memory leak in
the NDB log parser.
[5 Oct 2008 18:26]
Jon Stephens
Already documented, so status -> Closed.
[13 Dec 2008 0:27]
Bugs System
Pushed into 6.0.6-alpha (revid:msvensson@mysql.com-20080725161036-qlqbcdbr3avrj5xh) (version source revid:jonas@mysql.com-20080812185642-1nevjb94zj621dqx) (pib:5)

Description: If 'LogHandler->parseParams' fails the handler will not be freed before return from the function "Logger::addHandler' How to repeat: MCI Suggested fix: if(!handler->parseParams(params)) { *err= handler->getErrorCode(); if(handler->getErrorStr()) strncpy(errStr, handler->getErrorStr(), len); delete handler; << DBUG_RETURN(false); }