Bug #38380  Memory leak in LogHandler::addHandler after fail to parse params